public/css/site.css
/* ... */
.extent-overlay .span2 span{width: 100%; display: block;}

.extent-selection-mobile{display: none;}


.popup_wrapper {
z-index: 5001; /* any number + 1 */
/*}

.popup__close {
    float: right;
    margin-top: -.5em;
}

*/
/**
 * HEADER
 *
 * Defines the header area for all site (public site, BMIS, CABlink, Advisernet).
 *
 */
.main-header {
  background-color: #FFF;
  overflow: hidden;
}
.advisernet .main-header {
  background-color: #CBE0E4;
}
.bmis .main-header {
  background-color: #DDDAE1;
}
.cablink .main-header {
  background-color: #FFE4C1;
}
.main-header__content {
  max-width: 1366px;
  margin: auto;
  clear: left;
  padding: 0 1em .5em 1em;
}
.main-header__content:after {
  content: " ";
  clear: both;
  display: block;
}
.main-header__logo {
  border: none;
  float: left;
  margin-top: .7em;
  max-width: 30%;
  max-width: calc(300px);
}
@media (max-width: 599px) {
  .main-header__logo {
    display: none;
  }
}
.main-header__logo.wide {
  display: none;
  border: none;
  float: none;
  max-width: 90%;
}
@media (max-width: 599px) {
  .main-header__logo.wide {
    display: block;
    text-align: center;
    margin-top: 8px;
    margin-top: 0.5rem;
  }
}
.main-header__menu-link {
  display: none;
}
.main-header__top-nav,
.main-header__search {
  float: right;
  clear: right;
}
.main-header__top-nav {
  margin: 0.5em -0.4em 0.2em 0;
  text-align: right;
  max-width: 70%;
  max-width: calc(100% - 300px);
}
.main-header__top-nav > a {
  padding: 0 .4em;
  display: inline-block;
  white-space: nowrap;
  border: none;
}
.main-header__top-nav__link--current {
  font-weight: bold;
}
.main-header__search {
  white-space: nowrap;
  margin: .4em 0;
}
input.main-header__search__input {
  width: 25em;
  float: left;
  padding: 0.2em;
}
.ie8 input.main-header__search__input {
  padding: .3em .2em;
}
.main-header__search__submit {
  border: 1px solid #404040;
  background: #404040;
  overflow: hidden;
  padding: .2em;
  border-radius: 0;
  float: left;
  margin: 0 0 0 -1px;
  width: 2em;
  color: #FFF;
}
.main-header__search__submit:hover,
.main-header__search__submit:focus {
  background: #202020;
}
@media (max-width: 599px) {
  .main-header__content {
    padding: 0;
  }
  .main-header__links {
    display: table;
    width: 100%;
    background: #004B88;
  }
  .main-header__links a {
    border: none;
    color: #FFF;
  }
  html[lang="en-SCT"] .main-header__links {
    background: #004B88;
  }
  .main-header__top-nav,
  .main-header__bottom-nav {
    display: none;
  }
  .main-header__menu-link {
    color: white;
    padding: 0 1em;
    width: 0;
  }
  .main-header__menu-link:link {
    text-decoration: none;
  }
  .main-header__search,
  .main-header__menu-link {
    display: table-cell;
    vertical-align: middle;
  }
  .main-header__search {
    width: 100%;
    padding-right: 1em;
    position: relative;
  }
  input.main-header__search__input {
    float: none;
    width: 100%;
  }
  .main-header__search__submit {
    position: absolute;
    right: .5em;
    top: 0;
  }
}
/**
 * TITLE
 *
 * All non-color variables.
 */
.title__brand {
  float: right;
  margin: 0px 16px;
  margin: 0rem 1rem;
  display: table;
  width: 0;
  max-width: -webkit-min-content;
  max-width: -moz-min-content;
  max-width: min-content;
  *max-width: 200px;
  *width: auto;
  _width: 200px;
}
.title__brand img {
  max-width: none;
}
@media (max-width: 839px) {
  .title__brand {
    float: none;
    margin: 0;
    display: block;
    max-width: none;
    width: auto;
  }
  .title__brand img {
    max-width: 100%;
  }
  .title__brand img {
    float: left;
    margin-right: 16px;
    margin-right: 1rem;
  }
}
.edit-mode .title__title {
  min-width: 80px;
  min-width: 5rem;
}
/**
 * MAIN CONTENT WRAPPER
 */
.title__subheading {
  margin-bottom: 2rem;
  margin-top: 2rem;
  padding: .35rem 0;
  padding: 1rem 0 1rem 0;
  border-top: #eeeeee 1px solid;
  border-bottom: #eeeeee 1px solid;
  font-size: 0.875rem;
  color: #606060;
}
.title__subheading--footer {
  margin-bottom: 2rem;
  margin-top: 2rem;
  padding: .35rem 0;
  padding: 1rem 0 1rem 0;
  border-top: #eeeeee 1px solid;
  border-bottom: #eeeeee 1px solid;
  font-size: 0.875rem;
  color: #606060;
}
.title__subheading--footer a {
  border-bottom: transparent;
}
.main-content {
  max-width: 1080px;
  margin: auto;
  clear: left;
  padding: 0px 16px;
  padding: 0rem 1rem;
  margin-top: 32px;
  margin-top: 2rem;
  margin-bottom: 24px;
  margin-bottom: 1.5rem;
}
.main-content:after {
  content: " ";
  clear: both;
  display: block;
}
.main-content--full-width {
  max-width: 60em;
}
@media (max-width: 839px) {
  .main-content--full-width {
    max-width: none;
    width: auto;
  }
}
.main-content__right {
  float: left;
  width: 66.66666667%;
}
@media (min-width: 600px) {
  .main-content__right {
    padding-right: 32px;
    padding-right: 2rem;
  }
}
@media (min-width: 840px) {
  .main-content__right {
    padding-right: 48px;
    padding-right: 3rem;
  }
}
@media (min-width: 1080px) {
  .main-content__right {
    padding-right: 96px;
    padding-right: 6rem;
  }
}
@media (max-width: 599px) {
  .main-content__right {
    float: none;
    width: auto;
    padding: 0;
  }
}
.main-content__sidebar {
  float: right;
  width: 16.66666667%;
  overflow: hidden;
  margin-bottom: 24px;
  margin-bottom: 1.5rem;
}
@media (max-width: 599px) {
  .main-content__sidebar {
    float: none;
    width: auto;
    margin-top: 1.5rem;
  }
}
@media (max-width: 839px) {
  .articleContent {
    width: auto;
  }
}
@media (max-width: 1148px) and (min-width: 600px) {
  .js .main-content {
    padding-right: 3.5em;
  }
}
/**
 * RSS FEED
 */
.feed__box {
  display: flex;
  flex-direction: column;
}
.feed {
  list-style: none;
  margin: 16px 0px;
  margin: 1rem 0rem;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-grow: 2;
}
.feed--content-page {
  display: block;
}
/* ... */

